Adjust citation display to avoid collapse

--- a/blocks/bubble-quote-citation/src/style.scss
+++ b/blocks/bubble-quote-citation/src/style.scss
@@ -1,4 +1,6 @@
 .wp-block-cjd-blocks-bubble-quote-citation {
+	display: block;
+
 	padding-left: 20px;
 	padding-right: 20px;
 
